Add a gradle task called benchmarkCuda
- Add a new cuda binary that was compiled with cuda toolkit 12.3.
- Change the order of BenchmarkEnergies.java to benchmark GPUs before
CPUs.